--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,26 +18,25 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-
-  cupertino_icons: ^0.1.3
-  firebase_auth: ^0.16.1
-  provider: ^4.1.3
-  cloud_firestore: ^0.13.7
-  curved_navigation_bar: ^0.3.3
-  firebase_core: ^0.4.5
-  firebase_storage: ^3.1.6
-  image_picker: ^0.6.7+4
-  uuid: 2.2.0
-  path: ^1.6.4
-  gradient_text: ^1.0.2
-  overlay_support: ^1.0.4
-  intl: ^0.16.1
+  gradient_text: ^1.0.1
+  image_picker: ^1.0.2
+  path: ^1.8.3
+  overlay_support: ^2.1.0
+  intl: ^0.18.1
+  uuid: ^3.0.7
+  firebase_storage: ^11.2.5
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  firebase_auth: ^4.7.2
+  cupertino_icons: ^1.0.5
+  curved_navigation_bar: ^1.0.3
+  provider: ^6.0.5
 
 
 
